# stock_data

./: .gitignore  AGENTS.md  README.md  pyproject.toml  stock_universe.cli
scripts/: fixture_matrix.py  foundation_smoke.py  live_plan_dry_run.py  live_sqlite_backfill.py  populate_reference_specialists.py  pressure_run_manifest.py  profile_catch_up.py  run_quality_gate.py
stock_universe/: __init__.py  agent_reporting.py  bar_quality.py  cli.py  cli_runtime.py  defaults.py  market_calendar.py  paths.py  progress.py  quality_audit.py  quality_repair.py  security_names.py  universe_status.py  us_market_hours.json
stock_universe/domain/: __init__.py  common.py  decisions.py  evidence.py  identity.py  plans.py  records.py  requests.py  segments.py
stock_universe/evidence/: __init__.py  collectors.py  contracts.py  legacy.py  normalizers.py
stock_universe/executors/: __init__.py  (+2 more)
tests/: backfill_test_support.py  test_backfill_evidence_sources.py  test_backfill_fixture_parity.py  test_backfill_runtime_protocols.py  test_catch_up_workflow.py  test_engine_boundaries.py  test_identity_search.py  test_live_plan_dry_run.py  test_market_calendar.py  test_massive_alias_history.py  test_massive_coverage_and_live_dry_run.py  test_massive_reference_and_probes.py  test_massive_ticker_replacement.py  test_packaging_metadata.py  test_pressure_manifest.py  test_reference_universe.py  test_sqlite_access.py  test_sqlite_foundation.py  test_stock_universe_cli.py  test_ticker_seed.py  test_xctx_bar_observation.py  test_xctx_surface_integrity.py  test_xctx_v2_bar_observation.py
(+47 files in other folders)
