[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-production"
version = "0.1.0"
description = "Behavior-preserving stock universe planning engine slice."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
stock-universe = "stock_universe.cli:main"
xctx = "stock_universe.xctx.cli:main"

[tool.setuptools.packages.find]
include = ["stock_universe*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
stock_universe = ["us_market_hours.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.12",
]
