[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-production"
version = "0.1.0"
description = "Stock universe data foundation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
stock-universe = "stock_universe.cli:main"
xctx = "stock_universe.xctx.cli:main"

[tool.setuptools.packages.find]
include = ["stock_universe*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
stock_universe = ["us_market_hours.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.12",
]
